# Snif

./: .gitignore  .snif.json  .snif.json.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PR-CHECKLIST  README.md  dist-workspace.toml  release.toml
.github/workflows/: ci.yml  sign-release.yml  snif-eval.yml  snif-review.yml
crates/: README.md
crates/snif-chunks/: Cargo.toml
crates/snif-chunks/src/: lib.rs
crates/snif-cli/: Cargo.toml
crates/snif-cli/src/: main.rs
crates/snif-cli/src/commands/: clean.rs  eval.rs  index.rs  mod.rs  review.rs  warm_embeddings.rs
crates/snif-cochange/: Cargo.toml
crates/snif-cochange/src/: lib.rs
crates/snif-config/: Cargo.toml
crates/snif-context/: Cargo.toml
crates/snif-context/src/: budget.rs  lib.rs
crates/snif-embeddings/: Cargo.toml
crates/snif-embeddings/src/: lib.rs
crates/snif-eval/: Cargo.toml
crates/snif-eval/src/: adapter.rs  fixture.rs  history.rs  lib.rs  metrics.rs  reporter.rs  retry.rs
crates/snif-execution/: Cargo.toml
crates/snif-execution/src/: lib.rs
crates/snif-feedback/: Cargo.toml
crates/snif-feedback/src/: collector.rs  filter.rs  lib.rs
crates/snif-graph/: Cargo.toml
crates/snif-output/: Cargo.toml
crates/snif-output/src/: filter.rs  fingerprint.rs  integrity.rs  lib.rs  parser.rs  sarif.rs  summary.rs  verify.rs
crates/snif-parser/: Cargo.toml
crates/snif-parser/src/: adapter.rs  lib.rs
crates/snif-parser/src/adapters/: java.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/snif-platform/: Cargo.toml
crates/snif-platform/src/: github.rs  gitlab.rs  lib.rs
crates/snif-prompts/: Cargo.toml
crates/snif-retrieval/: Cargo.toml
crates/snif-retrieval/src/: code_semantic.rs  keyword.rs  lib.rs  semantic.rs  structural.rs
crates/snif-store/: Cargo.toml
crates/snif-store/src/: cochange.rs  code_chunks.rs  embeddings.rs  files.rs  imports.rs  lib.rs  refs.rs  schema.rs  sql.rs  summaries.rs  symbols.rs
crates/snif-summarizer/: Cargo.toml
crates/snif-summarizer/src/: batch_parser.rs  client.rs  lib.rs  prompt.rs
crates/snif-types/: Cargo.toml
docs/: 05_dev_agent_architecture.adoc  TODO.md  architecture.md  bot-identity.md  ci.md  configuration.md  generate_charts.py  product-and-delivery.md  product.md  releasing.md  testing.md
docs/examples/: README.md
fixtures/: 01-unwrap-without-check.json  02-sql-injection.json  03-clean-refactor.json  04-clean-add-logging.json  05-style-noise.json  README.md
fixtures/01-unwrap-without-check/: change.patch  fixture.json
fixtures/02-sql-injection/: change.patch  fixture.json
fixtures/03-clean-refactor/: change.patch  fixture.json
fixtures/04-clean-add-logging/: change.patch  fixture.json
fixtures/05-style-noise/: change.patch  fixture.json
fixtures/06-off-by-one-loop/: change.patch  fixture.json
fixtures/07-missing-error-propagation/: change.patch  fixture.json
fixtures/08-integer-overflow/: change.patch  fixture.json
fixtures/09-use-after-move/: change.patch  fixture.json
fixtures/10-path-traversal/: change.patch  fixture.json
fixtures/11-hardcoded-secret/: change.patch  fixture.json
fixtures/12-race-condition/: change.patch  fixture.json
fixtures/13-resource-leak/: change.patch  fixture.json
fixtures/14-clean-add-tests/: change.patch  fixture.json
fixtures/15-clean-rename-module/: change.patch  fixture.json
fixtures/16-clean-add-struct-field/: change.patch  fixture.json
fixtures/17-clean-error-handling/: change.patch  fixture.json
fixtures/18-clean-derive-traits/: change.patch  fixture.json
fixtures/19-clean-extract-constant/: change.patch  fixture.json
fixtures/20-clean-update-dependency/: change.patch  fixture.json
fixtures/21-clean-add-documentation/: change.patch  fixture.json
fixtures/22-style-mixed-string-quotes/: change.patch  fixture.json
fixtures/23-style-verbose-match/: change.patch  fixture.json
fixtures/24-style-inconsistent-returns/: change.patch  fixture.json
fixtures/25-style-long-function/: change.patch  fixture.json
fixtures/26-ts-prototype-pollution/: change.patch  fixture.json  tsconfig.json
fixtures/27-ts-missing-await/: change.patch  fixture.json
fixtures/28-ts-xss-innerHTML/: change.patch  fixture.json
fixtures/29-ts-type-assertion-crash/: change.patch  fixture.json
fixtures/30-ts-event-listener-leak/: change.patch  fixture.json
fixtures/31-py-mutable-default-arg/: change.patch  fixture.json
fixtures/32-py-sql-injection/: change.patch  fixture.json
fixtures/33-py-unhandled-keyerror/: change.patch  fixture.json
fixtures/34-py-incorrect-comparison/: change.patch  fixture.json
fixtures/35-py-open-without-with/: change.patch  fixture.json
fixtures/36-java-null-deref/: change.patch  fixture.json
fixtures/37-java-resource-leak/: change.patch  fixture.json
fixtures/38-java-deserialization/: change.patch  fixture.json
fixtures/39-convention-missing-doc/: change.patch  fixture.json
fixtures/40-convention-error-type/: change.patch  fixture.json
fixtures/41-perf-n-plus-one-query/: change.patch  fixture.json
fixtures/42-perf-unbounded-collect/: change.patch  fixture.json
fixtures/43-clean-ts-refactor/: change.patch  fixture.json
fixtures/44-clean-py-add-tests/: change.patch  fixture.json
fixtures/45-clean-java-rename/: change.patch  fixture.json
fixtures/46-clean-ts-add-types/: change.patch  fixture.json
fixtures/47-style-ts-inconsistent-semicolons/: change.patch  fixture.json
fixtures/48-style-py-mixed-quotes/: change.patch  fixture.json
fixtures/49-style-java-verbose-getters/: change.patch  fixture.json
fixtures/50-style-py-long-function/: change.patch  fixture.json
spikes/: .gitignore  Cargo.toml  README.md  RESULTS.md
spikes/common/: Cargo.toml
spikes/spike-llm-embed/: Cargo.toml
spikes/spike-llm-embed/src/: cost.rs  embedder.rs  extractor.rs  main.rs  quality.rs  store.rs  summarizer.rs
spikes/spike-sqlite-vec/: Cargo.toml
spikes/spike-treesitter/: Cargo.toml
spikes/spike-treesitter/src/: main.rs  parser.rs
spikes/spike-treesitter/src/adapters/: python.rs  rust.rs  typescript.rs
(+67 files in other folders)
