[workspace]
members = [
    "crates/snif-cli",
    "crates/snif-config",
    "crates/snif-types",
    "crates/snif-parser",
    "crates/snif-graph",
    "crates/snif-store",
    "crates/snif-cochange",
    "crates/snif-embeddings",
    "crates/snif-summarizer",
    "crates/snif-retrieval",
    "crates/snif-context",
    "crates/snif-execution",
    "crates/snif-prompts",
    "crates/snif-output",
    "crates/snif-feedback",
    "crates/snif-platform",
    "crates/snif-eval",
]
exclude = ["spikes"]
resolver = "2"

[workspace.package]
version = "3.1.4"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.6"
zerocopy = { version = "0.7", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
streaming-iterator = "0.1"
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
