[package]
name = "snif"
version.workspace = true
edition.workspace = true

[[bin]]
name = "snif"
path = "src/main.rs"

[dependencies]
snif-config = { path = "../snif-config" }
snif-types = { path = "../snif-types" }
snif-parser = { path = "../snif-parser" }
snif-store = { path = "../snif-store" }
snif-graph = { path = "../snif-graph" }
snif-cochange = { path = "../snif-cochange" }
snif-summarizer = { path = "../snif-summarizer" }
snif-embeddings = { path = "../snif-embeddings" }
snif-retrieval = { path = "../snif-retrieval" }
snif-context = { path = "../snif-context" }
snif-prompts = { path = "../snif-prompts" }
snif-execution = { path = "../snif-execution" }
snif-output = { path = "../snif-output" }
snif-platform = { path = "../snif-platform" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
