[package]
name = "snif-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
snif-config = { path = "../snif-config" }
snif-cochange = { path = "../snif-cochange" }
snif-context = { path = "../snif-context" }
snif-eval = { path = "../snif-eval" }
snif-execution = { path = "../snif-execution" }
snif-embeddings = { path = "../snif-embeddings" }
snif-graph = { path = "../snif-graph" }
snif-output = { path = "../snif-output" }
snif-parser = { path = "../snif-parser" }
snif-platform = { path = "../snif-platform" }
snif-prompts = { path = "../snif-prompts" }
snif-retrieval = { path = "../snif-retrieval" }
snif-store = { path = "../snif-store" }
snif-summarizer = { path = "../snif-summarizer" }
snif-types = { path = "../snif-types" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
