[package]
name = "snif-eval"
version.workspace = true
edition.workspace = true

[dependencies]
snif-types = { path = "../snif-types" }
snif-config = { path = "../snif-config" }
snif-prompts = { path = "../snif-prompts" }
snif-execution = { path = "../snif-execution" }
snif-output = { path = "../snif-output" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
fs2 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1"
