[package]
name = "snif-execution"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
snif-config = { path = "../snif-config" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
