[package]
name = "snif-output"
version.workspace = true
edition.workspace = true

[dependencies]
snif-types = { path = "../snif-types" }
snif-config = { path = "../snif-config" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
