[package]
name = "snif-parser"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
snif-config = { path = "../snif-config" }
snif-types = { path = "../snif-types" }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-java = { workspace = true }
streaming-iterator = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
