[package]
name = "snif-platform"
version.workspace = true
edition.workspace = true

[dependencies]
snif-types = { path = "../snif-types" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { workspace = true }
