[package]
name = "snif-platform"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
snif-config = { path = "../snif-config" }
snif-types = { path = "../snif-types" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { workspace = true }
jsonwebtoken = "9"
