[package]
name = "snif-retrieval"
version.workspace = true
edition.workspace = true

[dependencies]
snif-types = { path = "../snif-types" }
snif-store = { path = "../snif-store" }
snif-embeddings = { path = "../snif-embeddings" }
snif-config = { path = "../snif-config" }
anyhow = { workspace = true }
tracing = { workspace = true }
