[package]
name = "snif-store"
version.workspace = true
edition.workspace = true

[dependencies]
snif-types = { path = "../snif-types" }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
