[package]
name = "snif-summarizer"
version.workspace = true
edition.workspace = true

[dependencies]
snif-store = { path = "../snif-store" }
snif-config = { path = "../snif-config" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
