[package]
name = "snif-summarizer"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
snif-store = { path = "../snif-store" }
snif-config = { path = "../snif-config" }
snif-execution = { path = "../snif-execution" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
