[package]
name = "snif-summarizer"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
snif-store = { path = "../snif-store" }
snif-config = { path = "../snif-config" }
snif-execution = { path = "../snif-execution" }
snif-types = { path = "../snif-types" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
