[package]
name = "spike-treesitter"
version = "0.1.0"
edition.workspace = true

[dependencies]
snif-common = { path = "../common" }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
streaming-iterator = "0.1"
anyhow = "1"
walkdir = "2"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
